[build-system]
requires = ["setuptools", "wheel", "pygame"]
build-backend = "setuptools.build_meta"

[project]
name = "ledsnake"
version = "0.1.0"
description = "A Python library for LED Snake games"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Your Name", email = "your.email@example.com" }]
keywords = ["led", "snake", "game"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []